samples/_failures_safe/1761717899_435e3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e30270c8.c: In function ‘main’:
./samples/SAFE/__tmp_e30270c8.c:173:9: error: expected expression at end of input
  173 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e30270c8.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e30270c8.c:173:9: error: expected declaration or statement at end of input
